# fintrack-fastapi

./: .env  .gitignore  fintrack.db  pyproject.toml
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
app/routers/: categories.py  users.py
